2007-10-04  Werner Koch  <wk@g10code.com>

	* mkerrors: Map EAGAIN to GPG_ERR_EAGAIN for read and write
	errors. 

2007-10-02  Werner Koch  <wk@g10code.com>

	* assuan-io.c (_assuan_io_read) [W32]: Map WSAEWOULDBLOCK to EAGAIN.
	* assuan-socket.c (_assuan_sock_check_nonce): N needs to be signed.

	* assuan-defs.h (struct assuan_context_s): Add LISTEN_NONCE.
	* assuan-socket-server.c (assuan_set_sock_nonce): New.
	(accept_connection): Check the nonce.

2007-10-01  Werner Koch  <wk@g10code.com>

	* assuan.h (ASSUAN_INT2FD, ASSUAN_FD2INT): New.

	* assuan-socket.c: Rewritten.
	(assuan_sock_new, assuan_sock_connect, assuan_sock_bind) 
	(assuan_sock_get_nonce, assuan_sock_check_nonce): New APIs.

	* assuan-io.c (_assuan_simple_read, _assuan_simple_write):
	Factored code out to ...
	(_assuan_io_read, _assuan_io_write): .. new.
	* assuan-io-pth.c (_assuan_io_read, _assuan_io_write): New.

2007-09-25  Werner Koch  <wk@g10code.com>

	* assuan.h (_assuan_gpg_strerror_r, _assuan_gpg_strsource): Add
	wrappers for these new internal functions.

2007-09-24  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-uds.c (uds_reader) [HAVE_W32_SYSTEM]: Do not touch the
	UDS structure in the context.  Reported by Frank Osterfeld.
	(uds_writer): Clarify code.

2007-09-14  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-pipe-connect.c (do_finish) [HAVE_W32_SYSTEM]: Close
	ctx->pid as handle.
	(pipe_connect_w32): Save the spawned processes handle.

2007-09-13  Werner Koch  <wk@g10code.com>

	* assuan-socket.c (_assuan_close): Add inactive debug outputs.

2007-09-11  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h: Use _WIN32 instead of HAVE_W32_SYSTEM.

2007-09-07  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-inquire.c (assuan_inquire_ext): If MAXLEN is 0, still
	initialize MEMBUF.
	
	* assuan-inquire.c (_assuan_inquire_ext_cb): Clear CTX->in_inquire
	before invoking callback and returning.

2007-09-05  Marcus Brinkmann  <marcus@g10code.de>
