@@ -1,3 +1,8 @@
+2007-10-05  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan-uds.c (wsa2errno) [HAVE_W32_SYSTEM]: New function.
+	(uds_reader, uds_writer) [HAVE_W32_SYSTEM]: Set errno.
+
 2007-10-04  Werner Koch  <wk@g10code.com>
 
 	* mkerrors: Map EAGAIN to GPG_ERR_EAGAIN for read and write
